Table Race_Event {
  RaceID int [unique, pk, not null, note: 'The current race'] 
  Location Text [not null, note: 'The location of the race']
  Date dateTime [not null, note: 'The time of the race']
  Creator int [not null]

  note: 'This table contains general information about the race'
}

Table Team {
  TeamID int [unique, pk, not null]
  RaceID int [not null]
  TeamName text [not null]

  Note: 'Contains general team information'
}

Table Shipment {
  ShipmentID int [unique, pk, not null]
  RaceID int [not null]
  CurrentLocation Text [not null]
  Destination Text [not null]
  Method text [note: 'Ship, plane, truck, submarine, etc.']
  CreatedBy int [not null, note: 'showes Race Event Organizer ID']
  Status text [not null]

  Note: 'The shipments contain all the containers'
}

Table Container {
  ConID int [unique, pk, not null]
  ShipmentID int [not null]
  CriticalContainer boolean [not null]
  Status text [not null]
  UpdatedBy int [not null]

  Note: 'Container can contain kits or f1 equipment'
}

Table ContainerContents {
  ConID int [unique, pk, not null]
  KitID int [unique, pk, not null]
}

Table Kit {
  KitID int [unique, pk, not null]
  OwnerID int [unique, pk, not null]
  TypeOfKit boolean [not null]
  TeamID int [not null]
  TotalWeight int [not null]
  KitSize text [note: 'small, medium, large']
}


Table Race_Event_Organizer {
  OrganizerID int [unique, pk, not null]
  Name text [not null]
  Permisions text [not null]
}


Table Person {
  PersonID int [unique, pk , not null]
  Name text [not null]
  KitID int [not null]
  PhoneNum text [not null]
  Permisions text [not null]
}

Table TeamKit_Manager {
  PersonID int [unique, pk, not null]
  TeamID int [not null]

  Note: 'The person who manages the teams kits'
}

Table RaceCrew_Member {
  PersonID int [unique, pk, not null]
  Role text [not null]

  Note: 'Inbound, on site, or Outbound as role, The person who manages the teams kits'
}

Table KitContents {
  KitID int [unique, pk, not null]
  PartID int [not null]
  PartDesc text [not null]
  PartWeight int [not null]
}

Ref: Race_Event.RaceID < Team.RaceID
Ref: Container.ConID < ContainerContents.ConID
Ref: ContainerContents.KitID < Kit.KitID
Ref: Shipment.ShipmentID < Container.ShipmentID
Ref: Race_Event.RaceID < Shipment.RaceID
Ref: Person.PersonID - TeamKit_Manager.PersonID
Ref: Race_Event_Organizer.OrganizerID - Race_Event.Creator
Ref: Race_Event_Organizer.OrganizerID < Shipment.CreatedBy
Ref: Person.PersonID - RaceCrew_Member.PersonID
Ref: Team.TeamID - TeamKit_Manager.TeamID
Ref: Person.PersonID - Kit.OwnerID
Ref: Team.TeamID < Kit.TeamID
Ref: Kit.KitID < KitContents.KitID
